--- a/hello.html
+++ b/hello.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <h1>welcome to my Website</h1>
+    <h1>welcome to my Website!!</h1>
     <p> hello, world</p>
-    <h2> mehmet demir</h2>
+    <h2> mehmet demir,,,</h2>
 </body>
 
 </html>
