add style to inline

--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>welcome to my Website</h1>
+    <h1 style="color:blue;">welcome to my Website</h1>
     <p> hello, world</p>
     <h2> mehmet demir</h2>
 </body>
